--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "fs": "^0.0.1-security",
+    "yt-search": "^2.7.5",
+    "ytdl-core": "^4.5.0"
   }
 }
